fixing background images on mobile

--- a/css/index.css
+++ b/css/index.css
@@ -449,6 +449,7 @@ footer .container .copyright {
   .home .cta .top-content .blueprint {
     background: url('../img/home/home-mobile-img-1.png');
     background-repeat: no-repeat;
+    background-position: top center;
     padding: 3% 0;
     width: 90%;
     order: 0;
@@ -464,6 +465,7 @@ footer .container .copyright {
   .home .cta .top-content .designs-img {
     background: url('../img/home/home-mobile-img-2.png');
     background-repeat: no-repeat;
+    background-position: top center;
     padding: 3% 0;
     width: 90%;
     order: 0;
@@ -573,6 +575,7 @@ footer .container .copyright {
   .home .recent-projects .project .villas-img {
     background: url('../img/home/home-mobile-villas-img.png');
     background-repeat: no-repeat;
+    background-position: top center;
   }
 }
 .home .recent-projects .project .outskirts-img {
@@ -588,6 +591,7 @@ footer .container .copyright {
   .home .recent-projects .project .outskirts-img {
     background: url('../img/home/home-mobile-outskirts-img.png');
     background-repeat: no-repeat;
+    background-position: top center;
     margin-top: 11.5%;
   }
 }
@@ -600,6 +604,7 @@ footer .container .copyright {
   .home .recent-projects .project .blocks-img {
     background: url('../img/home/home-mobile-the-blocks-img.png');
     background-repeat: no-repeat;
+    background-position: top center;
     margin-top: 11.5%;
   }
 }
