--- a/less/homepage.less
+++ b/less/homepage.less
@@ -66,6 +66,7 @@
          @media @phone {
            background: url('../img/home/home-mobile-img-1.png');
            background-repeat: no-repeat;
+           background-position: top center;
            padding: 3% 0;
            width: 90%;
            order: 0;
@@ -82,6 +83,7 @@
          @media @phone {
          background: url('../img/home/home-mobile-img-2.png');
          background-repeat: no-repeat;
+         background-position: top center;
          padding: 3% 0;
          width: 90%;
          order: 0;
@@ -187,6 +189,7 @@
         @media @phone {
           background: url('../img/home/home-mobile-villas-img.png');
           background-repeat: no-repeat;
+          background-position: top center;
         }
       }
 
@@ -199,6 +202,7 @@
         @media @phone {
           background: url('../img/home/home-mobile-outskirts-img.png');
           background-repeat: no-repeat;
+          background-position: top center;
           margin-top: 11.5%;
         }
       }
@@ -211,6 +215,7 @@
         @media @phone {
           background: url('../img/home/home-mobile-the-blocks-img.png');
           background-repeat: no-repeat;
+          background-position: top center;
           margin-top: 11.5%;
         }
       }
